--- a/calendar-date-picker.html
+++ b/calendar-date-picker.html
@@ -1,18 +1,18 @@
 
-<link rel="import" href="bower_components/paper-button/paper-button.html"/>
+<link rel="import" href="bower_components/paper-input/paper-input.html"/>
 <link rel="import" href="calendar-date.html"/>
 
 <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900' rel='stylesheet' type='text/css'>
 
-<polymer-element name="calendar-date-picker" attributes="selectedDate opened">
+<polymer-element name="calendar-date-picker" attributes="selectedDate opened orientation">
   <template>
 
-    <calendar-date id="datePicker" orientation="horizontal" selectedDate="{{selectedDate}}" relatedTarget="{{$.trigger}}" opened="{{opened}}"></calendar-date>
+    <calendar-date id="datePicker" orientation="{{orientation}}" selectedDate="{{selectedDate}}" relatedTarget="{{$.trigger}}" opened="{{opened}}"></calendar-date>
 
     <paper-input id="trigger" value="{{selectedDate}}" on-click="{{toggle}}" readonly></paper-input>
   </template>
   <script>
-    Polymer('paper-calendar-picker', {
+    Polymer('calendar-date-picker', {
       toggle: function() {
         this.$.datePicker.toggle();
       },
