--- a/calendar-date.html
+++ b/calendar-date.html
@@ -156,6 +156,12 @@
         height: 32px;
       }
 
+      paper-button::shadow .button-content {
+        padding:0;
+        align-items: flex-start !important;
+        display: block;
+      }
+
       .calender_row paper-button {
         border-radius: 50%;
         width: 32px;
