--- a/calendar-date-picker.html
+++ b/calendar-date-picker.html
@@ -4,10 +4,10 @@
 
 <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900' rel='stylesheet' type='text/css'>
 
-<polymer-element name="calendar-date-picker" attributes="selectedDate opened orientation">
+<polymer-element name="calendar-date-picker" attributes="selectedDate opened orientation align">
   <template>
 
-    <calendar-date id="datePicker" orientation="{{orientation}}" selectedDate="{{selectedDate}}" relatedTarget="{{$.trigger}}" opened="{{opened}}"></calendar-date>
+    <calendar-date id="datePicker" orientation="{{orientation}}" align="{{align}}" selectedDate="{{selectedDate}}" relatedTarget="{{$.trigger}}" opened="{{opened}}"></calendar-date>
 
     <paper-input id="trigger" value="{{selectedDate}}" on-click="{{toggle}}" readonly></paper-input>
   </template>
