--- a/calendar-date.html
+++ b/calendar-date.html
@@ -21,6 +21,7 @@
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
         -webkit-overflow-scrolling: touch;
+        z-index: 1;
       }
 
       :host([orientation="horizontal"]) {
